--- a/gallery.html
+++ b/gallery.html
@@ -109,7 +109,7 @@ content {
   text-align: center;
   width: 100%;
   float: left;
-  background-image: url(bridal2.png);
+  background-image: url(bridal.jpg);
   height: 400px; 
 }
 
